Fix responsive spacing, tweak nav bar
I'd noticed that when viewing on a cell phone-sized screen, the images
appropriately switched to the bottom of the screen, but WAY down. Turns
out, I'd set the inner container min-height to 100vh, when I needed to
set this on the outer container. I also made sure that the contact page
image didn't swap places, as unlike the other pages, it is below the
text to begin with.

The nav bar I adjusted so that it is a set of paragraphs in a div,
rather than an ordered list. This gives me more control over the
labels, but also allows me to highlight the current page.

--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ img.title {
     color: #222026;
     gap: 30px;
     margin-left: 30px;
+    min-height: 100vh;
 }
 
 .body-text img {
@@ -125,13 +126,13 @@ img.title {
     display: flex;
     flex-direction: column;
     width: 100%;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 .nav a {
     text-decoration: none;
     color: #fff;
-    font-size: 16pt;
+    font-size: 14pt;
     margin: 0;
 }
 .nav a:hover {
@@ -148,12 +149,22 @@ img.title {
     margin-bottom: 10px;
 }
 
+.nav p {
+    margin: 0;
+    padding: 10px 25px;
+}
+
+p.highlight {
+    background-color: #D9734E;
+}
+
 .nav img {
     width: 100px;
     height: 107px;
     opacity: 0.7;
     border: 1px solid;
     padding: 10px 50px;
+    margin-top: 30px;
 }
 
 /* h1 {
@@ -236,9 +247,12 @@ footer {
     .body-text {
         flex-direction: column-reverse;
         align-items: center;
+        justify-content: flex-end;
     }
     .contact {
         flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
     }
     .info img {
         height: 300px;
@@ -256,6 +270,11 @@ footer {
     .body-text {
         flex-direction: column-reverse;
         align-items: center;
+        justify-content: flex-end;
+    }
+    .contact {
+        flex-direction: column;
+        justify-content: flex-start;
     }
     .nav img {
         height: 57px;
